2002-03-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclMain.c: reduced oversized static buffer allocation.

	* unix/Makefile.in: added shell and gdb targets

	* unix/configure: 
	* unix/configure.in: backported improved AIX build support from 8.4.
	* unix/tcl.m4: backported 8.4 changes to HP-UX, IRIX64-6.*, SunOS,
	FreeBSD, AIX and Darwin targets.  Updated SC_LOADTCLCONFIG to
	detect when we build against a Tcl build dir.

2002-03-24  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl: Be sure the tcltest variable is updated.
	[Bug 454050].

	* library/tcltest/pkgIndex.tcl:
        * library/tcltest/tcltest.tcl:  Allow non-proc commands to be used
        as the customization hooks.  Bump to 1.0.2.  Converted from lazy to
	direct loading.  [Bug 495662]

2002-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclScan.c (Tcl_ScanObjCmd): prevented ckfree being
	called on a pointer to NULL.

2002-03-15  Miguel Sofer  <msofer@users.sourceforge.net>

	Backport of Donal Fellows patch:
	* tests/compile.test (compile-12.3): Test to detect bug 530320.
	* generic/tclCompile.c (TclCompileTokens): Fixed buffer overrun
	reported in bug 530320.

2002-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test:
	* tests/encoding.test: updated to reflect iso2022 escape change
	* library/encoding/iso2022-jp.enc: 
	* library/encoding/iso2022.enc: 
	* tools/encoding/iso2022-jp.esc:
	* tools/encoding/iso2022.esc: gave <ESC>$B precedence over <ESC>$@,
	based on comments (point 1) in [Bug #219283] (rfc 1468)

	* tests/encoding.test: added encoding-23.* tests
	* generic/tclIO.c (FilterInputBytes): reset the TCL_ENCODING_START
	flags in the ChannelState when using 'gets'. [Bug #523988]
	Also reduced the value of ENCODING_LINESIZE from 30 to 20 as this
	seems to improve the performance of 'gets' according to tclbench.

2002-02-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* unix/tclUnixChan.c (TclpOpenFileChannel): Added code to regonize