@@ -1,3 +1,8 @@
+2002-03-28  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclParse.c (Tcl_EvalEx): passing the correct commandSize
+	to TclEvalObjvInternal. [Bug 219362], fix by David Knoll.
+
 2002-03-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclMain.c: reduced oversized static buffer allocation.
